# 15-Puzzle

./: .gitignore  CMakeLists.txt  README.md
cmake/: add_test.cmake
include/: Puzzle15Macros.h  Queue.h
includes/: MinHeap.h
src/: Board.cc  Board.cpp  Board.h  CMakeLists.txt  Solver.cc  Solver.cpp  Solver.h  TestClient.cc  TestClient.cpp
tests/: BoardTest.cc  BoardTest.cpp  BoardTest.h  CMakeLists.txt  README.md  Test.cc  Test.h
tests/testfiles/: README.md
tests/testfiles/input/: board1.txt
tests/testfiles/ref/: board1_ref.txt
